--- a/country.html
+++ b/country.html
@@ -23,8 +23,8 @@
                 <div class="card-body">
                     <div id="accordion">
 
-                        <div class="card">
-                          <div class="card-header" id="headingOne">
+                        <div class="">
+                          <div class="" id="headingOne">
                             <h5 class="mb-0">
                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Other names
@@ -33,14 +33,14 @@
                           </div>
                       
                           <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="">
                                 <ol id="other-names"></ol>
                             </div>
                           </div>
                         </div>
 
-                        <div class="card">
-                          <div class="card-header" id="headingTwo">
+                        <div class="">
+                          <div class="" id="headingTwo">
                             <h5 class="mb-0">
                               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Region
@@ -48,14 +48,14 @@
                             </h5>
                           </div>
                           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                            <div class="card-body" id="region">
+                            <div class="" id="region">
                                 
                             </div>
                           </div>
                         </div>
 
-                        <div class="card">
-                          <div class="card-header" id="headingThree">
+                        <div class="">
+                          <div class="" id="headingThree">
                             <h5 class="mb-0">
                               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Borders
@@ -63,14 +63,14 @@
                             </h5>
                           </div>
                           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="">
                                 <ol id="borders"></ol>
                             </div>
                           </div>
                         </div>
 
-                        <div class="card">
-                          <div class="card-header" id="headingFour">
+                        <div class="">
+                          <div class="" id="headingFour">
                             <h5 class="mb-0">
                               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                 Currencies
@@ -78,14 +78,14 @@
                             </h5>
                           </div>
                           <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="">
                                 <ol id="currencies"></ol>
                             </div>
                           </div>
                         </div>
 
-                        <div class="card">
-                          <div class="card-header" id="headingFive">
+                        <div class="">
+                          <div class="" id="headingFive">
                             <h5 class="mb-0">
                               <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                                 Languages
@@ -93,7 +93,7 @@
                             </h5>
                           </div>
                           <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="">
                                 <ol id="languages"></ol>
                             </div>
                           </div>
@@ -101,9 +101,9 @@
 
                       </div>
                 </div>
-                <div class="card-footer text-center">
-                    <a class="btn btn-light" href="index.html">Back</a>
-                </div>
+                <h1 class="text-center">
+                  <a class="btn btn-light" href="index.html">Back</a>
+                </h1>
             </div>
         </div>
     </div>
