--- a/country.html
+++ b/country.html
@@ -27,7 +27,7 @@
                     <div class="item" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Other names</p>
-                      <span class="oi" data-glyph="chevron-bottom"></span>
+                      <span class="oi" id="headingOneIcon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
                       <div class="">
@@ -38,7 +38,7 @@
                     <div class="item" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Region</p>
-                      <span class="oi" data-glyph="chevron-bottom"></span>
+                      <span class="oi" id="headingTwoIcon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo">
                       <div class="" id="region">
@@ -59,7 +59,7 @@
                     <div class="item" id="headingFour" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Currencies</p>
-                      <span class="oi" data-glyph="chevron-bottom"></span>
+                      <span class="oi" id="headingFourIcon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour">
                       <div class="">
@@ -70,7 +70,7 @@
                     <div class="item" id="headingFive" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Languages</p>
-                      <span class="oi" data-glyph="chevron-bottom"></span>
+                      <span class="oi" id="headingFiveIcon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive">
                       <div class="">
