--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   </div>
 
   <div id="main">
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-light bg-light" style="padding:0px 150px 0px 150px">
         <div class="form-group">
           <label for="theme">Theme</label>
           <select class="form-control" id="theme">
@@ -42,7 +41,6 @@
           <span class="oi" data-glyph="cart"></span>
           <span id="count-cart"></span>
         </button>
-      </div>
     </nav>
 
     <table class="table" id="table">
