jquery replace by javascript

--- a/country.html
+++ b/country.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="assets/country.css" />
     <link rel="stylesheet" href="assets/open-iconic-master\font\css\open-iconic.css" />
     <link rel="stylesheet" href="assets/bootstrap.min.css" />
-
-    <script src="assets/jquery-3.6.0.min.js"></script>
-    <script src="assets/bootstrap.min.js"></script>
-    <script src="assets/popper.min.js"></script>
-    <script src="assets/country.js"></script>
 </head>
 <body>
     <div class="bg">
@@ -20,14 +15,13 @@
         <div>
             <div class="card">
                 <div class="card-img-top" id="flag"></div>
-                <!-- <img style="height: 140px;" class="" id="flag" src="" alt="Card image cap"> -->
                 <div class="card-body">
                   <nav class="nav flex-column">
 
                     <div class="item" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Other names</p>
-                      <span class="oi" id="headingOneIcon" data-glyph="chevron-bottom"></span>
+                      <span class="oi oi-bottom-icon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
                       <div class="">
@@ -38,7 +32,7 @@
                     <div class="item" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Region</p>
-                      <span class="oi" id="headingTwoIcon" data-glyph="chevron-bottom"></span>
+                      <span class="oi oi-bottom-icon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo">
                       <div class="" id="region">
@@ -48,7 +42,7 @@
                     <div class="item" id="headingThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Borders</p>
-                      <span id="headingThreeIcon" class="oi" data-glyph="chevron-bottom"></span>
+                      <span class="oi oi-bottom-icon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree">
                       <div class="">
@@ -59,7 +53,7 @@
                     <div class="item" id="headingFour" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Currencies</p>
-                      <span class="oi" id="headingFourIcon" data-glyph="chevron-bottom"></span>
+                      <span class="oi oi-bottom-icon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour">
                       <div class="">
@@ -70,7 +64,7 @@
                     <div class="item" id="headingFive" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                       <span class="oi" data-glyph="caret-right"></span>
                       <p>Languages</p>
-                      <span class="oi" id="headingFiveIcon" data-glyph="chevron-bottom"></span>
+                      <span class="oi oi-bottom-icon" data-glyph="chevron-bottom"></span>
                     </div>
                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive">
                       <div class="">
@@ -87,6 +81,9 @@
         </div>
     </div>
 
-    
+    <script src="assets/jquery-3.2.1.slim.min.js"></script>
+    <script src="assets/bootstrap.min.js"></script>
+    <script src="assets/popper.min.js"></script>
+    <script src="assets/country.js"></script>
 </body>
 </html>
