--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   <link rel="stylesheet" href="assets/sideNav.css" />
   <link rel="stylesheet" href="assets/open-iconic-master\font\css\open-iconic.css" />
   <link rel="stylesheet" href="assets/bootstrap.min.css" />
-
-  <script src="assets/jquery-3.6.0.min.js"></script>
-  <script src="assets/bootstrap.min.js"></script>
-  <script src="assets/popper.min.js"></script>
-  <script src="assets/index.js"></script>
 </head>
 
 <body>
@@ -43,7 +38,7 @@
         </button>
     </nav>
 
-    <table class="table" id="table">
+    <table class="table" onclick="closeNav()">
       <thead>
         <tr>
           <th scope="col">Flag</th>
@@ -60,5 +55,10 @@
     </table>
   </div>
 
+  
+  <script src="assets/jquery-3.2.1.slim.min.js"></script>
+  <script src="assets/bootstrap.min.js"></script>
+  <script src="assets/popper.min.js"></script>
+  <script src="assets/index.js"></script>
 </body>
 </html>
